objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>Order Date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <displayFormat>Ord-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Select_Customer__c</fullName>
        <label>Select Customer</label>
        <referenceTo>e_Customer__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Select_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select Product</label>
        <referenceTo>e_Product__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>Total Amount with GST</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order</label>
    <nameField>
        <label>Sales Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>